$Id$                       -*-text-*-


**** 1.08 [unreleased]

Feature rt.cpan.org #120208

	Unable to install 1.07 in local::lib environment

Feature rt.cpan.org #119679

	UpdateHandler for responding to UPDATE packets

Discontinue support for pre-5.6 perl

	Remove pre-5.6 workarounds and outdated language features


**** 1.07 December 29, 2016

Fix rt.cpan.org #118598/#108908

	Serious Makefile.PL issues
	"make install" now suppressed if pre-1.01 version detected

Fix rt.cpan.org #115558

	Net::DNS::Nameserver does not allow EDNS replies

Fix rt.cpan.org #114917

	Net::DNS::ZoneFile fails to parse mixed case mnemonics

Fix rt.cpan.org #114876

	Use of uninitialized value in lc at MSWin32.pm line 77

Fix rt.cpan.org #114819

	Net::DNS fails to compile with taint checks enabled


**** 1.06 May 27, 2016

Fix rt.cpan.org #114918

	Net::DNS::ZoneFile fails when unnamed RR follows $ORIGIN

Fix rt.cpan.org #114351

	Case sensitive compression breaks resolver->nameservers()

Fix rt.cpan.org #113579

	Net::DNS::Resolver dies on scoped IPv6 nameserver address

Fix rt.cpan.org #113020

	Resolve::Recurse Hangs

Fix rt.cpan.org #112860

	improperly terminated AXFR at t/08-IPv4.t line 446.


**** 1.05 March 7, 2016

Fix rt.cpan.org #111559

	1.04: TSIG not working anymore (TSIG.pm)

Fix rt.cpan.org #108908

	Installing recent version gets shadowed by old version.
	Warnings added to Makefile.PL and t/00-version.t.

Fix rt.cpan.org #66900

	Net::DNS::Async unable to retry truncated UDP using TCP because
	of limitations in Net::DNS.


**** 1.04 December 8, 2015

Fix rt.cpan.org #109183

	Semantics of "retry" and "retrans" options has changed with 1.03

Fix rt.cpan.org #109152

	Deprecated method make_query_packet breaks calling code

Fix rt.cpan.org #109135

	Resolver behaves differently with long and short IPv6 address format

Fix rt.cpan.org #108745

	Net::DNS::Resolver bgsend


**** 1.03 November 6, 2015

Fix rt.cpan.org #107897

	t/10-recurse.t freezes, never completes
